Use debify in docker to build debian package

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 
 id_rsa*
 
+# Ignore generated debify script
+docker-debify
+
 # Ignore all logfiles and tempfiles.
 /log
 engines/conjur_audit/spec/dummy/log
