--- a/Dockerfile.fpm
+++ b/Dockerfile.fpm
@@ -20,6 +20,7 @@ COPY Gemfile.lock ./
 RUN bundle config set deployment 'true' && \
     bundle config set path 'vendor/bundle' && \
     bundle
+RUN mkdir -p .bundle
 
 COPY . .
 ADD debify.sh /
