--- a/dev/Dockerfile.dev
+++ b/dev/Dockerfile.dev
@@ -1,9 +1,10 @@
+FROM registry2.itci.conjur.net/ubuntu-fips:18.04 as openSSL-builder
+
 FROM phusion/baseimage:0.11
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
-    ruby2.5 ruby2.5-dev \
     postgresql-client \
     libpq-dev \
     unattended-upgrades \
@@ -19,7 +20,24 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -y && \
     libfontconfig1-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN gem install --no-document --version 2.1.4 bundler
+RUN mkdir -p /usr/local/ssl/
+COPY --from=openSSL-builder /usr/local/ssl/ /usr/local/ssl/
+RUN ln -sf /usr/local/ssl/bin/openssl /usr/bin/openssl
+# ENV OPENSSL_FIPS 1
+
+RUN mkdir ~/.gnupg
+RUN echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf
+
+# install ruby compile with OpenSSL FIPS compliance
+RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB && \
+    curl -sSL https://get.rvm.io | bash -s stable
+RUN ["/bin/bash", "-c",  "source /usr/local/rvm/scripts/rvm; rvm install ruby-2.5.7 --with-openssl-dir=/usr/local/ssl"]
+ENV PATH "/usr/local/rvm/rubies/ruby-2.5.7/bin:/usr/local/ssl/bin:${PATH}"
+RUN ln -sf /usr/local/rvm/rubies/ruby-2.5.7/bin/ruby /usr/bin/ruby2.5
+
+RUN gem install bundler:2.1.4
+
+RUN rmdir /usr/local/ssl/certs && ln -sf /etc/ssl/certs/ /usr/local/ssl/
 
 RUN mkdir -p /src/conjur-server
 
